2020-07-21  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-fold.c (pkl_fold_ps_cast): Fix masking of the
	resulting magnitude of converted offsets.
	* testsuite/poke.pkl/cast-offsets-5.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2020-07-21  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (struct_field_inserter): Simplify code.
	(struct_mapper): Likewise.
	(struct_comparator): Likewise.
	(struct_constructor): Likewise.

2020-07-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/ras: Rename .arg to .let, support initialization
	expressions, and substitute RAS variables in literal C.
	* libpoke/pkl-gen.pks (struct_field_extractor): Make use of these
	new goodies.

2020-07-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/ras: Support for .arg directives.
	* libpoke/pkl-gen.pks: Make use of them.

2020-07-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (array_mapper): Use macro arguments to
	access AST nodes instead of relying on the context.
	(array_valmapper): Likewise.
	(array_writer): Likewise.
	(array_bounder): Likewise.
	(array_constructor): Likewise.
	* libpoke/pkl-gen.c: Adjust accordingly.

2020-07-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (struct_mapper): Use macro arguments to
	access AST nodes, instead of relying on the context.
	(struct_comparator): Likewise.
	(struct_constructor): Likewise.
	(struct_writer): Likewise.
	(struct_field_writer): Likewise.
	(handle_struct_field_constraints): Likewise.
	* libpoke/pkl-gen.c: Adapt accordingly.

2020-07-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/ras: Support arguments in RAS functions.

2020-07-20  Jose E. Marchesi  <jemarch@gnu.org>

	* HACKING (Calling compiled Poke from RAS): New section.

2020-07-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/ras: Support for the .call directive.

2020-07-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/ras: Use RAS_PUSH_ASM and RAS_POP_ASM instead of the
	PKL_GEN_ macros.